<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:padding="12dp">

        <!-- Prev and Next button -->
        <ImageButton
            android:id="@+id/ib_prev_nav"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:background="@color/lightGrey"
            android:padding="4dp"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:gravity="left"/>
        <!-- Divider -->
        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/white">
        </View>

        <ImageButton
            android:id="@+id/ib_next_nav"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:background="@color/lightGrey"
            android:padding="4dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:gravity="right" />

    </LinearLayout>

</FrameLayout>