<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecipeStepsDetailActivity"
    android:padding="12dp"
    android:background="@color/lightGrey">

    <!-- Holds Media Player, Recipe Step Instruction, Nav -->
    <!-- Media Player Container -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:id="@+id/media_player_container"
        android:background="@color/white">
    </FrameLayout>

    <!-- Recipe Instruction Container -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".35"
        android:id="@+id/recipe_steps_instruction_container"
        android:background="@color/white">
    </FrameLayout>

    <!-- Navigation Container -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:id="@+id/previous_or_next_container"
        android:background="@color/white">
    </FrameLayout>

</LinearLayout>